--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appnope==0.1.0
+autopep8==1.5.2
 backcall==0.1.0
 cycler==0.10.0
 decorator==4.4.2
@@ -18,6 +19,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+pycodestyle==2.5.0
 Pygments==2.6.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
